--- a/webgl.html
+++ b/webgl.html
@@ -75,6 +75,7 @@ void main() {
 }
   </script>
   <script src="twgl-full.min.js"></script>
+  <script src="BBOX.js"></script>
   <script src="Console.js"></script>
   <script src="constants.js"></script>
   <script src="util.js"></script>
