--- a/game/index.html
+++ b/game/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <link href="game/twgljs-icon.png" rel="shortcut icon" type="image/png">
-    <link href="game/webgl.css" rel="stylesheet" type="text/css">
+    <link href="twgljs-icon.png" rel="shortcut icon" type="image/png">
+    <link href="webgl.css" rel="stylesheet" type="text/css">
     <title>WebGL2</title>
   </head>
   <body>
@@ -74,22 +74,22 @@ void main() {
   gl_FragColor = outColor;
 }
   </script>
-  <script src="game/twgl-full.min.js"></script>
-  <script src="game/BBOX.js"></script>
-  <script src="game/Console.js"></script>
-  <script src="game/constants.js"></script>
-  <script src="game/util.js"></script>
-  <script src="game/Point2D.js"></script>
-  <script src="game/Lines.js"></script>
-  <script src="game/Float.js"></script>
-  <script src="game/Polygon.js"></script>
-  <script src="game/Points.js"></script>
-  <script src="game/Line.js"></script>
-  <script src="game/FloatArray.js"></script>
-  <script src="game/ObjectsArray.js"></script>
-  <script src="game/cube.js"></script>
-  <script src="game/markt19.js"></script>
-  <script src="game/markt23.js"></script>
-  <!--<script src="game/marktWegbaan.js"></script>-->
-  <script src="game/webgl.js"></script>
+  <script src="twgl-full.min.js"></script>
+  <script src="BBOX.js"></script>
+  <script src="Console.js"></script>
+  <script src="constants.js"></script>
+  <script src="util.js"></script>
+  <script src="Point2D.js"></script>
+  <script src="Lines.js"></script>
+  <script src="Float.js"></script>
+  <script src="Polygon.js"></script>
+  <script src="Points.js"></script>
+  <script src="Line.js"></script>
+  <script src="FloatArray.js"></script>
+  <script src="ObjectsArray.js"></script>
+  <script src="cube.js"></script>
+  <script src="markt19.js"></script>
+  <script src="markt23.js"></script>
+  <!--<script src="marktWegbaan.js"></script>-->
+  <script src="webgl.js"></script>
 </html>
